# conan-cmake-example-lib

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py
include/: libfoo.h
src/: libfoo.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
